# models

./: .gitignore  Makefile  README.md  pyproject.toml
.checkpoints/: model-v1.pth
.checkpoints/v1/: modelv1-2024-10-30-10-18-15.pth  modelv1-2024-10-30-10-20-43.pth
checkpoints/: model-v1.pth
checkpoints/v1/: modelv1-2024-10-30-10-15-10.pth  modelv1-2024-10-30-10-17-07.pth
classification neural network/: learn-neural-network.ipynb
linear_regression/: data.py  evaluate.py  mlflow_logging.py  model.py  trainer.py
linear_regression/checkpoints/: model-v1.pth
linear_regression/checkpoints/v1/: modelv1-2024-10-30-10-27-55.pth  modelv1-2024-10-30-10-29-45.pth  modelv1-2024-10-30-11-03-36.pth  modelv1-2024-10-30-11-09-07.pth  modelv1-2024-10-30-11-10-27.pth
mlartifacts/467294602406330757/022ef35844b7441ea0ad68ef3fc2e57f/artifacts/iris_model/: MLmodel  conda.yaml  model.pkl  python_env.yaml
mlruns/0/: meta.yaml
mlruns/467294602406330757/: meta.yaml
mlruns/467294602406330757/022ef35844b7441ea0ad68ef3fc2e57f/: meta.yaml
mlruns/467294602406330757/022ef35844b7441ea0ad68ef3fc2e57f/metrics/: recall
mlruns/467294602406330757/022ef35844b7441ea0ad68ef3fc2e57f/tags/: Training Info  mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/models/iris_model-tracking-quickstart/: meta.yaml
mlruns/models/iris_model-tracking-quickstart/version-1/: meta.yaml
notebooks/: MLflow.ipynb  MLflow.py  linear_regression.ipynb  logistic_regression.ipynb
utils/: utils.py
